--- a/style.css
+++ b/style.css
@@ -511,6 +511,10 @@ section[id="contacts"] {
     font-size: 2em;
   }
 
+  .header__inner {
+    max-width: 400px;
+  }
+
   .container {
     width: 96%;
     margin: 0 2%;
@@ -587,7 +591,7 @@ section[id="contacts"] {
   }
 
   .header__inner {
-    max-width: 250px;
+    max-width: 300px;
   }
 
   .header__buttons .header__btn + .header__btn {
