--- a/style.css
+++ b/style.css
@@ -514,7 +514,7 @@ section[id="contacts"] {
   .header__inner {
     max-width: 400px;
   }
-
+/* temporary comment */
   .container {
     width: 96%;
     margin: 0 2%;
