--- a/polar-project/style.css
+++ b/polar-project/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Hind+Madurai:wght@400;600&family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Hind+Madurai:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap');
 
 /* 
 font-family: 'Fredoka One', cursive;
@@ -12,17 +12,17 @@ html {
   font-size: 16px;
   font-weight: 400;
   text-decoration: none;
-  user-select: none;
+  /* user-select: none; */
   outline: none !important;
   
   /* for IE */
-  -ms-user-select: none;
+  /* -ms-user-select: none; */
   /* Для мозилы */
-  -moz-user-select: none;
+  /* -moz-user-select: none; */
   /*  Для конкверора */
-  -khtml-user-select: none;
+  /* -khtml-user-select: none; */
   /* Для Сафари и Хрома*/
-  -webkit-user-select: none;
+  /* -webkit-user-select: none; */
 }
 
 * {
@@ -296,7 +296,6 @@ a {
   line-height: 24px;
   padding-bottom: 35px;
 }
-
 .details-img {
   position: absolute;
   right: 0;
@@ -305,12 +304,111 @@ a {
   height: 655px;
 }
 
+.product{
+  margin-bottom: 72px;
+}
+.product__inner{
+  display: none;
+}
+.product-title {
+  text-align: center;
+  font-weight: 600;
+  font-size: 44.2px;
+  line-height: 61px;
+  color: #150101;
+}
+.product-dots ol{
+  display: flex;
+  justify-content: center;
+}
+.product-dots li{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  color: #00000099;
+  border-bottom: 3px solid #00000000;
+  cursor: pointer;
+  transition: .2s;
+  margin-bottom: 50px;
+}
+.product-dots li + li{
+  margin-left: 40px;
+}
+.product-dots li:hover{
+  border-bottom: 3px solid #D64374;
+}
+.product-dots--active{
+  border-bottom: 3px solid #D64374 !important;
+}
+.product__item-imgleft,
+.product__item-imgright{
+  display: flex;
+}
+.product__item-img img{
+  width: 580px;
+  height: 415px;
+}
+.product__item-imgleft img{
+  margin-right: 75px;
+}
+.product__item-imgright img{
+  margin-left: 75px;
+}
+.product__item-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 450px;
+}
+.product__item-imgright .product__item-title,
+.product__item-discr,
+.product__item-price,
+.product__item-link{
+  text-align: right;
+}
+.product__item-title{
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 36px;
+  color: #000000;
+  padding-bottom: 10px;
+}
+.product__item-discr{
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  color: #000000b3;
+  padding-bottom: 25px;
+}
+.product__item-price{
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 36px;
+  color: #000000;
+  padding-bottom: 20px;
+}
+.product__item-price span{
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 28px;
+  text-decoration-line: line-through;
+  color: #000000b3;
+}
+.nohide{
+  display: block;
+}
+#1{
+  background-color: #000;
+}
+#2{
+  background-color: #fff;
+}
     /* app section */
 
 .app {
   height: 670px;
   background-color: #F8EDF0;
-  border: 10px solid gray;
 }
 
 .app__inner {
@@ -389,12 +487,158 @@ a {
 .app-img {
   position: absolute;
   left: 0;
-  top: 70px;
+  top: 90px;
   width: 305px;
   height: 627px;
 }
 
+.question{
+  height: 545px;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+.question__inner{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.question-title {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  text-align: center;
+  color: #000;
+  padding-bottom: 60px;
+}
+.question-form{
+  position: relative;
+  width: 635px;
+}
+.question-form input{
+  width: 500px;
+  height: 75px;
+  border: none;
+  border-radius: 5px;
+  background: #FAFAFA;
+  padding: 0 15px 0 10px;
+}
+.question-form input::placeholder{
+  padding: 0 30px 0 10px;
+}
+.question-form button{
+  position: absolute;
+  right: 5px;
+  width: 135px;
+  height: 75px;
+  background: #D64374;
+  border: none;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
+.footer {
+  height: 380px;
+  background: #0A0808;
+}
+.footer__inner{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+.footer-text{
+  width: 250px;
+}
+.footer-text_discription{
+  color: rgba(255, 255, 255, 0.7);
+}
+.footer-menu{
+  display: flex;
+  color: rgba(255, 255, 255, 0.7);
+  justify-content: space-between;
+  width: 380px;
+}
+.footer-menu__first ol{
+  padding: 0;
+  color: #fff;
+  height: 135px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: rgba(255, 255, 255, 0.7);
+}
+.footer-menu__second ol{
+  padding: 0;
+  color: #fff;
+  height: 110px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: rgba(255, 255, 255, 0.7);
+}
+.footer-text__follow h4{
+  height: 2px;
+  color: #fff;
+}
+.footer-menu li:hover{
+  color: #fff;
+}
+.footer-email{
+  margin-left: 40px;
+}
+.footer-email h3{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #fff;
+}
+.footer-email form {
+  border: 2px solid #d6437485;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+.footer-email input {
+  padding: 17px 15px 17px 27px;
+  margin: 0;
+  width: 260px;
+  background: #00000000;
+  border: none;
+  border-radius: 5px;
+  transition: .3s;
+}
+.footer-email input:focus{
+  background: #fff;
+  border: none
+}
+.footer-email button {
+  margin: 0;
+  background: #D23166;
+  width: 125px;
+  padding: 17px 0;
+  border: none;
+  border-radius: 5px;
+  margin-left: -10px;
+  cursor: pointer;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  color: #fff;
+}
+.footer-email__ico ol{
+  display: flex;
+  padding: 0;
+}
+.footer-email__ico li{
+  vertical-align: middle;
+}
+.footer-email__ico li + li{
+  margin-left: 10px;
+}
 
 @media screen and (max-width: 1024px) {
   
