--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ a {
 button, textarea, input {
     outline: none;
 }
-
 .header {
   height: 100vh;
   background-color: #000000c7;
@@ -116,19 +115,17 @@ button, textarea, input {
 }
 
 .header__btn {
-  color: white;
+  color: #000000;
   font-size: 1.2em;
-  background-color: #00a2ec;
+  background-color: #bb86fc;
   padding: 10px 20px;
   border-radius: 15px;
-  border: 1px solid #0b30d3;
   transition: 0.4s;
+  cursor: pointer;
 }
 
 .header__btn:hover {
-  background-color: #0b29b1;
-  text-decoration: underline solid #00a2ec;
-  cursor: pointer;
+  background-color: #c597fd;
 }
 
 section {
@@ -526,14 +523,19 @@ section {
   font-weight: bold;
   border-radius: 15px;
   border: 2px solid black;
-  background-color: #046801d0; 
+  background-color: #bb86fc; 
   padding: 20px 10px;
   cursor: no-drop;
-  opacity: 0.8;
+  opacity: 0.85;
 }
 
 .contacts__other {
   width: auto;
+  -ms-user-select: text;
+  -moz-user-select: text;
+  -khtml-user-select: text;
+  -webkit-user-select: text;
+  user-select: text;
 }
 
 .contacts__contact {
